--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "express-session": "^1.17.1",
-    "http-errors": "~1.6.3",
+    "formidable": "^1.2.2",
+    "http-errors": "^1.6.3",
     "mongoose": "^5.11.16",
     "morgan": "~1.9.1",
+    "nodemon": "^2.0.7",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0"
   }
