--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "ig": "0.0.5",
     "mongoose": "^5.11.16",
     "morgan": "~1.9.1",
+    "nodemailer": "^6.5.0",
     "nodemon": "^2.0.7",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0"
