--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@google-cloud/vision": "^2.3.1",
+    "bcrypt": "^5.0.1",
     "connect-flash": "^0.1.1",
     "convert-rupees-into-words": "^1.0.6",
     "cookie-parser": "~1.4.4",
